Fixed email link, aligned page elements, added css to cards

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   /* image-rendering: auto; */
   image-rendering: crisp-edges;
   /* image-rendering: pixelated; */
+  text-align: center;
 }
 
 .App-content {
@@ -30,6 +31,7 @@
 
 .text-color {
   color: #136aec;
+  object-position: center;
 }
 
 .p-color {
@@ -37,3 +39,36 @@
   font-weight: bolder;
 }
 
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.5);
+  padding: 16px;
+  text-align: center;
+  /* background-color: canaryYellow; */
+}
